Add button to duplicate toolbar row

--- a/Core/ToDoList/ToDoList.rc
+++ b/Core/ToDoList/ToDoList.rc
@@ -1819,7 +1819,8 @@ BEGIN
                     LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,7,321,224
     PUSHBUTTON      "Move &Up",IDC_MOVEUP,337,7,50,14
     PUSHBUTTON      "Move &Down",IDC_MOVEDOWN,337,26,50,14
-    PUSHBUTTON      "Delete",IDC_DELETE,337,52,50,14
+    PUSHBUTTON      "D&uplicate",IDC_DUPLICATE,337,52,50,14
+    PUSHBUTTON      "D&elete",IDC_DELETE,337,71,50,14
 END
 
 IDD_ABOUT_DIALOG DIALOG DISCARDABLE  0, 0, 332, 238
