Refactor 'paste from clipboard' to support importing from drop text

--- a/Core/ToDoList/ToDoList.rc
+++ b/Core/ToDoList/ToDoList.rc
@@ -1739,8 +1739,8 @@ BEGIN
     COMBOBOX        IDC_FORMAT,62,7,165,125,CBS_DROPDOWNLIST | 
                     CBS_OWNERDRAWFIXED | CBS_SORT | CBS_HASSTRINGS | 
                     WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_CLIPBOARDTEXT,7,41,220,82,ES_MULTILINE | 
-                    ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL
+    EDITTEXT        IDC_TEXT,7,41,220,82,ES_MULTILINE | ES_AUTOVSCROLL | 
+                    ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL
     DEFPUSHBUTTON   "&Paste",IDOK,123,157,50,14,WS_GROUP
     PUSHBUTTON      "Cancel",IDCANCEL,177,157,50,14
     PUSHBUTTON      "&Refresh",IDC_REFRESH,177,129,50,14
@@ -2105,6 +2105,22 @@ FONT 8, "Tahoma"
 BEGIN
     CONTROL         "",IDC_FRAME,"Static",SS_BLACKFRAME | NOT WS_VISIBLE,0,0,
                     369,156
+END
+
+IDD_DROPIMPORT_DIALOG DIALOG DISCARDABLE  0, 0, 234, 178
+STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Import Tasks from Text"
+FONT 8, "Tahoma"
+BEGIN
+    LTEXT           "&Format",-1,7,9,52,8
+    COMBOBOX        IDC_FORMAT,62,7,165,125,CBS_DROPDOWNLIST | 
+                    CBS_OWNERDRAWFIXED | CBS_SORT | CBS_HASSTRINGS | 
+                    WS_VSCROLL | WS_TABSTOP
+    EDITTEXT        IDC_TEXT,7,41,220,109,ES_MULTILINE | ES_AUTOVSCROLL | 
+                    ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL
+    DEFPUSHBUTTON   "&Import",IDOK,123,157,50,14,WS_GROUP
+    PUSHBUTTON      "Cancel",IDCANCEL,177,157,50,14
+    LTEXT           "&Text:",-1,7,29,134,8
 END
 
 
@@ -4400,6 +4416,14 @@ BEGIN
         RIGHTMARGIN, 363
         TOPMARGIN, 7
         BOTTOMMARGIN, 152
+    END
+
+    IDD_DROPIMPORT_DIALOG, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 227
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 171
     END
 END
 #endif    // APSTUDIO_INVOKED
