--- a/Core/ToDoList/ToDoList.vcxproj
+++ b/Core/ToDoList/ToDoList.vcxproj
@@ -476,7 +476,7 @@ copy unicode_release\ToDoList.exe ..\..\todolist_Plugins\release /y
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
-    <ClCompile Include="TDLPasteFromClipboardDlg.cpp">
+    <ClCompile Include="TDLImportFromTextDlg.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
@@ -703,7 +703,7 @@ copy unicode_release\ToDoList.exe ..\..\todolist_Plugins\release /y
     <ClInclude Include="TDLMultiSortDlg.h" />
     <ClInclude Include="TDLOffsetDatesDlg.h" />
     <ClInclude Include="TDLOleMessageFilter.h" />
-    <ClInclude Include="TDLPasteFromClipboardDlg.h" />
+    <ClInclude Include="TDLImportFromTextDlg.h" />
     <ClInclude Include="TDLPrefMigrationDlg.h" />
     <ClInclude Include="TDLPrintDialog.h" />
     <ClInclude Include="TDLPriorityComboBox.h" />
