Refactor CTDLImportDialog to handle dropping or pasting text (unfinished)

--- a/Core/ToDoList/ToDoList.rc
+++ b/Core/ToDoList/ToDoList.rc
@@ -1122,10 +1122,10 @@ BEGIN
     GROUPBOX        "Import From",IDC_FROMBORDER,7,28,227,176
     CONTROL         "F&ile",IDC_FROMFILE,"Button",BS_AUTORADIOBUTTON | 
                     WS_GROUP,15,44,47,10
-    EDITTEXT        IDC_FROMFILEPATH,63,43,162,14,ES_AUTOHSCROLL
-    CONTROL         "&Windows Clipboard",IDC_FROMCLIPBOARD,"Button",
+    EDITTEXT        IDC_INPUTFILE,63,43,162,14,ES_AUTOHSCROLL
+    CONTROL         "&Windows Clipboard",IDC_FROMTEXT,"Button",
                     BS_AUTORADIOBUTTON | BS_TOP | BS_MULTILINE,15,63,151,10
-    EDITTEXT        IDC_FROMCLIPBOARDTEXT,25,77,199,100,ES_MULTILINE | 
+    EDITTEXT        IDC_INPUTTEXT,25,77,199,100,ES_MULTILINE | 
                     ES_AUTOVSCROLL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL
     PUSHBUTTON      "&Refresh",IDC_REFRESHCLIPBOARD,175,182,50,14
     GROUPBOX        "Import To",IDC_TOBORDER,244,28,204,176
@@ -1730,24 +1730,6 @@ BEGIN
     COMBOBOX        IDC_THEMONTH,127,92,81,107,CBS_DROPDOWNLIST | WS_TABSTOP
 END
 
-IDD_PASTEIMPORT_DIALOG DIALOG DISCARDABLE  0, 0, 234, 178
-STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Paste Tasks from Clipboard"
-FONT 8, "Tahoma"
-BEGIN
-    LTEXT           "&Format",IDC_STATIC,7,9,52,8
-    COMBOBOX        IDC_FORMAT,62,7,165,125,CBS_DROPDOWNLIST | 
-                    CBS_OWNERDRAWFIXED | CBS_SORT | CBS_HASSTRINGS | 
-                    WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_TEXT,7,41,220,82,ES_MULTILINE | ES_AUTOVSCROLL | 
-                    ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL
-    DEFPUSHBUTTON   "&Paste",IDOK,123,157,50,14,WS_GROUP
-    PUSHBUTTON      "Cancel",IDCANCEL,177,157,50,14
-    PUSHBUTTON      "&Refresh",IDC_REFRESH,177,129,50,14
-    LTEXT           "&Clipboard text:",IDC_STATIC,7,29,134,8
-    CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,7,149,220,1
-END
-
 IDD_ANALYSELOGGEDTIME_DIALOG DIALOG DISCARDABLE  0, 0, 333, 198
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Analyse Logged Time"
@@ -2105,22 +2087,6 @@ FONT 8, "Tahoma"
 BEGIN
     CONTROL         "",IDC_FRAME,"Static",SS_BLACKFRAME | NOT WS_VISIBLE,0,0,
                     369,156
-END
-
-IDD_DROPIMPORT_DIALOG DIALOG DISCARDABLE  0, 0, 234, 178
-STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Import Tasks from Text"
-FONT 8, "Tahoma"
-BEGIN
-    LTEXT           "&Format",-1,7,9,52,8
-    COMBOBOX        IDC_FORMAT,62,7,165,125,CBS_DROPDOWNLIST | 
-                    CBS_OWNERDRAWFIXED | CBS_SORT | CBS_HASSTRINGS | 
-                    WS_VSCROLL | WS_TABSTOP
-    EDITTEXT        IDC_TEXT,7,41,220,109,ES_MULTILINE | ES_AUTOVSCROLL | 
-                    ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL
-    DEFPUSHBUTTON   "&Import",IDOK,123,157,50,14,WS_GROUP
-    PUSHBUTTON      "Cancel",IDCANCEL,177,157,50,14
-    LTEXT           "&Text:",-1,7,29,134,8
 END
 
 
@@ -4315,14 +4281,6 @@ BEGIN
         BOTTOMMARGIN, 84
     END
 
-    IDD_PASTEIMPORT_DIALOG, DIALOG
-    BEGIN
-        LEFTMARGIN, 7
-        RIGHTMARGIN, 227
-        TOPMARGIN, 7
-        BOTTOMMARGIN, 171
-    END
-
     IDD_ANALYSELOGGEDTIME_DIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
@@ -4416,14 +4374,6 @@ BEGIN
         RIGHTMARGIN, 363
         TOPMARGIN, 7
         BOTTOMMARGIN, 152
-    END
-
-    IDD_DROPIMPORT_DIALOG, DIALOG
-    BEGIN
-        LEFTMARGIN, 7
-        RIGHTMARGIN, 227
-        TOPMARGIN, 7
-        BOTTOMMARGIN, 171
     END
 END
 #endif    // APSTUDIO_INVOKED
