Modify string resource

--- a/Core/ToDoList/ToDoList.rc
+++ b/Core/ToDoList/ToDoList.rc
@@ -5662,7 +5662,7 @@ BEGIN
     IDS_CUSTOM_TIMEATTRIB   "Time (%s)"
     IDS_IMPORTFROMTEXT      "&Text:"
     IDS_IMPORTTOTOPOFTASKLIST "Top of tasklist"
-    IDS_IMPORTTOSELTASK     "Selected task"
+    IDS_IMPORTTOSELTASK     "Subtask of selected task"
     IDS_IMPORTTOBELOWSELTASK "Below selected task"
     IDS_IMPORTTOBOTTOMOFTASKLIST "Bottom of tasklist"
 END
