--- a/Core/ToDoList/ToDoList.vcxproj
+++ b/Core/ToDoList/ToDoList.vcxproj
@@ -111,7 +111,7 @@ copy unicode_debug\ToDoList.pdb ..\..\Plugins\debug /y
 </Command>
     </PostBuildEvent>
     <BuildLog>
-      <Path />
+      <Path>$(IntDir)$(MSBuildProjectName).log</Path>
     </BuildLog>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Unicode Release|Win32'">
@@ -766,7 +766,6 @@ copy unicode_release\ToDoList.exe ..\..\todolist_Plugins\release /y
     <None Include="res\find_toolbar_metro.bmp" />
     <None Include="res\find_toolbar_std.bmp" />
     <None Include="res\help_button.ico" />
-    <None Include="res\icon1.ico" />
     <None Include="res\list_view_std.ico" />
     <None Include="res\null.ico" />
     <None Include="res\outlooktypes.bmp" />
