Remove trailing colons

--- a/Core/ToDoList/ToDoList.rc
+++ b/Core/ToDoList/ToDoList.rc
@@ -2093,9 +2093,9 @@ STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Save Tasklist As"
 FONT 8, "MS Sans Serif"
 BEGIN
-    LTEXT           "New project name:",IDC_STATIC,7,7,222,8
+    LTEXT           "New project name",IDC_STATIC,7,7,222,8
     EDITTEXT        IDC_NEWPROJNAME,7,17,222,14,ES_AUTOHSCROLL
-    LTEXT           "New file path:",IDC_STATIC,7,39,44,8
+    LTEXT           "New file path",IDC_STATIC,7,39,42,8
     EDITTEXT        IDC_NEWFILEPATH,7,49,222,14,ES_AUTOHSCROLL
     DEFPUSHBUTTON   "OK",IDOK,123,69,50,14
     PUSHBUTTON      "Cancel",IDCANCEL,179,69,50,14
