Add title and date fields to export dialog

--- a/Core/ToDoList/ToDoList.rc
+++ b/Core/ToDoList/ToDoList.rc
@@ -72,30 +72,35 @@ END
 // Dialog
 //
 
-IDD_EXPORT_DIALOG DIALOG DISCARDABLE  0, 0, 384, 291
+IDD_EXPORT_DIALOG DIALOG DISCARDABLE  0, 0, 384, 311
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Export Tasks"
 FONT 8, "Tahoma"
 BEGIN
-    LTEXT           "E&xport",IDC_STATIC,7,9,21,8
-    COMBOBOX        IDC_TASKLISTOPTIONS,41,7,187,125,CBS_DROPDOWNLIST | 
+    LTEXT           "&Title",IDC_STATIC,7,9,28,8
+    COMBOBOX        IDC_EXPORTTITLE,63,7,165,30,CBS_DROPDOWN | CBS_SORT | 
                     WS_VSCROLL | WS_TABSTOP
-    LTEXT           "&Format",IDC_STATIC,7,28,22,8
-    COMBOBOX        IDC_FORMATOPTIONS,41,25,187,125,CBS_DROPDOWNLIST | 
+    CONTROL         "T&oday's date",IDC_EXPORTDATE,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,239,9,138,10
+    LTEXT           "E&xport",IDC_STATIC,7,27,21,8
+    COMBOBOX        IDC_TASKLISTOPTIONS,63,25,165,125,CBS_DROPDOWNLIST | 
+                    WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Exp&ort to one file",IDC_EXPORTONEFILE,"Button",
+                    BS_AUTOCHECKBOX | BS_TOP | WS_TABSTOP,239,26,138,21
+    LTEXT           "&Format",IDC_STATIC,7,45,22,8
+    COMBOBOX        IDC_FORMATOPTIONS,63,43,165,125,CBS_DROPDOWNLIST | 
                     CBS_OWNERDRAWFIXED | CBS_SORT | CBS_HASSTRINGS | 
                     WS_VSCROLL | WS_TABSTOP
     CONTROL         "F&ile",IDC_TOPATH,"Button",BS_AUTORADIOBUTTON | 
-                    WS_GROUP,15,62,47,10
+                    WS_GROUP,15,80,47,10
     CONTROL         "&Windows Clipboard",IDC_TOCLIPBOARD,"Button",
-                    BS_AUTORADIOBUTTON | BS_TOP | BS_MULTILINE,15,81,219,10
-    EDITTEXT        IDC_EXPORTPATH,63,61,304,14,ES_AUTOHSCROLL | WS_GROUP
+                    BS_AUTORADIOBUTTON | BS_TOP | BS_MULTILINE,15,99,219,10
+    EDITTEXT        IDC_EXPORTPATH,63,79,304,14,ES_AUTOHSCROLL | WS_GROUP
     CONTROL         "",IDC_FRAME,"Static",SS_BLACKFRAME | NOT WS_VISIBLE | 
-                    WS_DISABLED,7,106,370,157
-    DEFPUSHBUTTON   "&Export",IDOK,273,270,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,327,270,50,14
-    CONTROL         "Exp&ort to one file",IDC_EXPORTONEFILE,"Button",
-                    BS_AUTOCHECKBOX | BS_TOP | WS_TABSTOP,239,8,138,21
-    GROUPBOX        "Export To",IDC_STATIC,7,47,370,52
+                    WS_DISABLED,7,124,370,157
+    DEFPUSHBUTTON   "&Export",IDOK,273,290,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,327,290,50,14
+    GROUPBOX        "Export To",IDC_STATIC,7,65,370,52
 END
 
 IDD_PREFERENCES DIALOGEX 0, 0, 547, 295
@@ -4090,7 +4095,7 @@ BEGIN
     BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 377
-        BOTTOMMARGIN, 284
+        BOTTOMMARGIN, 304
     END
 
     IDD_PREFERENCES, DIALOG
@@ -5695,6 +5700,7 @@ STRINGTABLE DISCARDABLE
 BEGIN
     IDS_IMPORTDIALOGTITLE_TEXT "Import Tasks from Text"
     IDS_IMPORTDIALOGTITLE_FILE "Import Tasks from File"
+    IDS_EXPORTTITLE_MULTIPLEFILES "<multiple tasklists>"
 END
 
 #endif    // English (Australia) resources
