--- a/Core/ToDoList/ToDoList.vcxproj
+++ b/Core/ToDoList/ToDoList.vcxproj
@@ -108,6 +108,9 @@
 mkdir ..\..\Plugins\debug
 copy unicode_debug\ToDoList.exe ..\..\Plugins\debug /y
 copy unicode_debug\ToDoList.pdb ..\..\Plugins\debug /y
+
+unicode_debug\TDLTest.exe
+
 </Command>
     </PostBuildEvent>
     <BuildLog>
@@ -170,6 +173,8 @@ copy unicode_debug\ToDoList.pdb ..\..\Plugins\debug /y
       <Command>mkdir ..\..\ToDoList_Plugins
 mkdir ..\..\ToDoList_Plugins\release
 copy unicode_release\ToDoList.exe ..\..\todolist_Plugins\release /y
+
+unicode_release\TDLTest.exe
 </Command>
     </PostBuildEvent>
     <BuildLog>
