--- a/Core/KanbanBoard/KanbanBoard.vcxproj
+++ b/Core/KanbanBoard/KanbanBoard.vcxproj
@@ -129,7 +129,7 @@ copy unicode_release\KanbanBoard.dll ..\todolist\unicode_release /y
       <ProgramDataBaseFileName>.\Unicode_Debug/</ProgramDataBaseFileName>
       <WarningLevel>Level3</WarningLevel>
       <SuppressStartupBanner>true</SuppressStartupBanner>
-      <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
+      <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <ResourceCompile>
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
